feat: added icon and animation to pumpkin

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>O Beco da Abóbora - 2025</title>
     <link rel="stylesheet" href="./styles/fonts.css" />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     <script src="./scripts/index.js" defer></script>
   </head>
   <body>
@@ -36,15 +37,15 @@
       <div class="info">
         <div>
           <h4>Fantasias</h4>
-          <p>Use sua melhor fantasia — o mais criativo será premiado!</p>
+          <p>Use a sua melhor, as mais criativas serão premiadas</p>
         </div>
         <div>
           <h4>Bebidas & Comidas</h4>
-          <p>Temáticas, misteriosas e deliciosas.</p>
+          <p>Temáticas, misteriosas e apodrecidas.</p>
         </div>
         <div>
           <h4>Local</h4>
-          <p>Desaparecido nº 13, Bairro Sombrio</p>
+          <p>Rua Ceará, 1646 - Mansão no Campos Elíseos</p>
         </div>
       </div>
     </section>
