--- a/pages/ticket.html
+++ b/pages/ticket.html
@@ -6,10 +6,11 @@
     <title>Seu Ingresso — Doces ou Travessuras 2025</title>
     <link rel="stylesheet" href="../styles/fonts.css" />
     <link rel="stylesheet" href="../styles/ticket.css" />
+    <link rel="icon" type="image/x-icon" href="../assets/images/favicon.ico">
     <script src="../scripts/ticket-generator.js" defer></script>
   </head>
   <body>
-    <button class="back" onclick="window.location.href='/'">← Voltar</button>
+    <button class="back" onclick="window.location.href='../index.html'">← Voltar</button>
 
     <section class="ticket-page">
       <h2>Ingresso Reservado!</h2>
