feat: Adicionadas informações da festa

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="hero-content">
         <div>
           <h2>Doces ou Travessuras?</h2>
-          <h3>Fantasias, bebidas e comidas temáticas — apenas para os corajosos.</h3>
+          <h3>Fantasias, bebidas e comidas temáticas — apenas para os corajosos.<br />31/10 - 19H</h3>
           <a href="#tickets">Comprar Ingressos</a>
         </div>
         <div class="image-container">
@@ -44,8 +44,8 @@
           <p>Temáticas, misteriosas e apodrecidas.</p>
         </div>
         <div>
-          <h4>Local</h4>
-          <p>Rua Ceará, 1646 - Mansão no Campos Elíseos</p>
+          <h4>Local e Hora</h4>
+          <p>19H - Rua Ceará, 1646 - Mansão no Campos Elíseos</p>
         </div>
       </div>
     </section>
@@ -59,7 +59,7 @@
         </div>
         <div class="ticket-form">
           <form>
-            <label for="name">Nome</label>
+            <label for="name" id="nameLabel">Nome</label>
             <input type="text" id="name" name="name" placeholder="Seu nome" required />
 
             <button type="button" id="get-tickets">Reservar (R$25)</button>
